[tool.poetry]
name = "boombox-v4"
version = "0.1.0"
description = ""
authors = ["lonewanderer27 <adrianejames27@gmail.com>"]
readme = "README.md"
packages = [{include = "boombox_v4"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.3"
lyrics-extractor = "^3.0.1"
py-cord = "^2.4.0"
PyNaCl = "^1.5.0"
youtube_dl = "^2021.12.17"
asyncio = "^3.4.3"

[tool.poetry.scripts]
start = "app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
